# razer-laptop-control

./: .gitignore  NOTES.md  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
Captures/: 4800-auto.pcap  4800.pcap  4900.pcap  AUTO Fan Selected.pcapng  Balanced Selected.pcapng  FAN 5000RPM Selected.pcapng  Fan 4700RPM Selected.pcapng  Gaming mode selected.pcapng  README.md  auto-4800.pcap  auto_fan.pcap  bal.pcap  balanced.pcap  brightness0_100  gam.pcap  gaming.pcap  logo_toggle  manual_fan.pcap  pcap.sh  startup.pcap  test.csv
application/build-razer-laptop-control-daemon-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  razer-laptop-control-daemon.cbp
application/build-razer-laptop-control-daemon-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-70891685c02b8a1a150e.json  cmakeFiles-v1-63c9d5a2999fa5e01417.json  codemodel-v2-819e460374f3709f3bb8.json  index-2020-01-03T09-07-03-0226.json  target-razer-laptop-control-daemon-Debug-51ff279026f5b6e21ab6.json  (+1 more)
application/build-razer-laptop-control-daemon-Desktop-Debug/razer-laptop-control-daemon_autogen/: moc_predefs.h
application/razer-laptop-control-daemon/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.cpp.autosave
application/razer-laptop-control-daemon/razer-laptop-control-daemon_autogen/: moc_predefs.h
daemon/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  install.sh  razercontrol-daemon  razerlaptop-control.service
daemon/src/: daemon.cpp  main.cpp
driver/: Makefile  README.md  dkms.conf  hotplug.sh  test_module.sh
driver/src/: Makefile  chroma.c  chroma.h  core.c  core.h  defines.h  fancontrol.c  fancontrol.h  razer_common.c  razer_sys_control.c  test.txt
razer_control_gui/: .gitignore  Cargo.toml  README.md  install.sh  razerdaemon.service
razer_control_gui/service/: Cargo.toml
razer_control_gui/service/src/: comms.rs  config.rs  core.rs  daemon.rs  daemon_core.rs  driver_sysfs.rs  effects.rs  main.rs  main_cli.rs  rgb.rs
razer_control_gui/service/src/kbd/: board.rs  effects.rs  mod.rs
razer_control_gui/src/: cli.rs  comms.rs  config.rs  daemon.rs  driver_sysfs.rs  gui.rs
razer_control_gui/src/kbd/: board.rs  effects.rs  mod.rs
razer_control_gui/src/ui/: #test.glade#  test.glade  test.glade~
rgb_test_service/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  key_colour_map  rgb_test
rgb_test_service/src/: colours.hpp  effects.cpp  effects.h  keyboard.cpp  keyboard.hpp  main.cpp  power_fan_control.cpp  power_fan_control.hpp
rgb_test_service/src/effects/: EFFECT.hpp
udev/: 99-razer-laptop-control.rules  99-razerlc.rules  install.sh  razer_perms.sh
