[package]
name = "service"
version = "0.1.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "razer-cli"
path = "src/cli.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.16"
rand = "0.7.3"
lazy_static = "1.4.0"
bincode = "1.3.1"
systemstat = "0.1.5"
libpulse-binding = "2.16.1"