[package]
name = "service"
version = "0.1.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "razer-cli"
path = "src/main_cli.rs"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
tiny-nix-ipc = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.16"
rand = "0.7.3"
lazy_static = "1.4.0"
